# birl_trajectory_excution

./: CMakeLists.txt  package.xml  setup.py
launch/: start.launch
scripts/: move_r_arm_home.py  move_r_arm_prepick.py  move_r_arm_preplace.py  test_robot_running.py
src/birl_trajectory_excution/: _constant.py  joint_action_client.py  robot_runing_mode.py  utils.py
