<?xml version="1.0"?>
<package format="2">
  <name>birl_trajectory_excution</name>
  <version>0.0.0</version>
  <description>The birl_trajectory_excution package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="birl-spai-ubuntu14@todo.todo">birl-spai-ubuntu14</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <exec_depend>actionlib</exec_depend>

  <build_depend>trajectory_msgs</build_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <build_depend>trajectory_msgs</build_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>baxter_core_msgs</build_depend>
  <build_export_depend>baxter_core_msgs</build_export_depend>
  <exec_depend>baxter_core_msgs</exec_depend>

  <build_depend>smach </build_depend>
  <build_export_depend>smach </build_export_depend>
  <exec_depend>smach </exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
